# project-template

./: .gitignore  CONTRIBUTING.md  Dockerfile  Procfile  README.md  app.json  config.yml  conftest.py  heroku.yml  pyproject.toml  task-definition.json
.github/: dependabot.yml
.github/actions/install-dependencies/: action.yaml
.github/actions/setup/: action.yaml
.github/workflows/: backport.yml  deploy.yml  sync-branches.yml  test.yml
app/: __init__.py  __main__.py  app.py  app_config.py  config.py  constants.py  create_and_join_tables.py  create_cubes.py  load_tables.py  path.py  skeleton.py  start_app.py  start_session.py
app/__resources__/: station_information.json
app/util/: __init__.py  column.py  fact_based_hierarchy.py  normalize_postgres_dsn_for_atoti_jdbc.py  normalize_postgres_dsn_for_atoti_sql.py  normalize_postgresql_dsn_for_atoti_sql.py  read_json.py  reverse_geocode.py  run_periodically.py
app/util/skeleton/: __init__.py  _node.py  column.py  contributors_count.py  fact_based_hierarchy.py  skeleton.py
cli/: __init__.py  _get_executable_path.py  _run_command.py  app.py  create_poetry_auth_toml.py  get_executable_path.py  run_command.py
project/: __main__.py  start_session.py
scripts/: __init__.py  commands.py  run_command.py
skeleton/: __init__.py  __main__.py  _node.py  generate.py  node.py  skeleton.py  typing.py
tests/: conftest.py  expected_total_capacity.py  test_docker.py  test_normalize_dsn_for_atoti_jdbc.py  test_normalize_dsn_for_atoti_sql.py  test_session.py  total_capacity.py
tests/data/: station_information.json  station_location.csv  station_status.json
tests/docker/: _docker_container.py  _run_command.py  _timeout.py  conftest.py  test_docker.py  timeout.py
