[dependency-groups]
dev = ["anyio", "docker", "pandas-stubs", "pytest", "ruff", "ty"]

[project]
name = "app"
version = "0.1.0"
# Keep in sync with:
# - .github/workflows/test.yml
# - Dockerfile`'s `FROM` commands.
requires-python = ">=3.11"
dependencies = [
    "atoti[jdbc]",
    "httpx",
    "pandas",
    "pydantic",
    "pydantic-settings",
    "typing-extensions",
]

[tool.pytest]
addopts = ["--doctest-modules"]
anyio_mode = "auto"
filterwarnings = ["error"]
strict = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "COM812",  # Covered by the formatter.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D213",
    "E501",
    "E741",    # `l` is used for level (consistency with `h` for hierarchy and `m` for measure).
    "EM102",   # Not worth the annoyance.
    "ISC001",  # Covered by the formatter.
    "PLC0414", # Redundant imports are used for re-exporting (See https://peps.python.org/pep-0484/#stub-files).
    "S101",    # `assert` is useful when used correctly (https://realpython.com/python-assert-statement).
    "TCH",     # Pydantic needs to resolve type annotations at runtime.
    "TID252",
    "TRY003",  # Not worth the annoyance.
]
select = ["ALL"]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["atoti", "pandas"]

[tool.ruff.lint.flake8-import-conventions.aliases]
atoti = "tt"
pandas = "pd"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ty.rules]
unused-ignore-comment = "warn"

[tool.ty.terminal]
error-on-warning = true

[tool.uv]
# Keep in sync with:
# - .github/workflows/test.yml
# - Dockerfile`'s `builder`.
required-version = ">=0.9.18"
